# media-file-manager

./: .env  .env.example  .gitignore  App.tsx  BUILD_FIXES_SUMMARY.md  BUILD_TRIGGER.md  CLOUDINARY_FOLDER_IMPLEMENTATION.md  CREATE_NETLIFY_SITE.md  CURRENT_STATUS.md  DEBUG_BLANK_PAGE.md  DEPLOYMENT-README.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL-FIXES-SUMMARY.md  FIX-SUMMARY.md  FIXES-SUMMARY.md  FOLDER_MANAGEMENT_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  NETLIFY_DEPLOY_GUIDE.md  Procfile  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  SETUP_SECRETS.md  SOLUTION_SUMMARY.md  SYNC_TESTING.md  TESTING_CHECKLIST.md  WEBFLOW_GRID_SETUP.md  WEBFLOW_SYNC_SETUP.md  XANO-API-KEY-FIX-README.md  app.json  app.py  app.py.backup  app_enhanced.py  app_enhanced_updated.py  check_static.py.backup  debug.html  deploy-to-netlify.js  (+24 more)
.netlify/: state.json
app/: main.py
new-file-manager/: index.html  package-lock.json  package.json
public/: _redirects  aircheck-player-widget.html  cloudinary-upload.html  debug-info.html  index.html
services/: CloudinaryService.ts
src/: .gitignore  App-minimal.tsx  App-original.tsx  App-test.tsx  App-working-backup.tsx  App.css  App.js  App.tsx  App.tsx.backup  AppBoundary.tsx  FileManagerComponents.js  TestApp.tsx  airtableService.js  app.json  app_enhanced.py  craco.config.js  index.css  index.js  main-simple.tsx  main.tsx  package-lock.json  package.json  vite-env.d.ts
templates/: SAVEDindex.html  index.html  index_enhanced.html  media_list_enhanced.html  system_status.html  upload.html
(+83 files in other folders)
