[tool.poetry]
name = "media-file-manager"
version = "1.0.0"
description = "Idaho Broadcasting Media File Manager with XANO and Cloudinary integration"
authors = ["Dan McColly <danmccolly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
python-multipart = "0.0.6"
jinja2 = "3.1.2"
requests = "2.31.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
